--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -38,7 +38,7 @@
         </li>
         <li>
           <a class="dopebar-link last-played-link" href="#">
-            Last Played
+            Last played
           </a>
         </li>
       {% endif %}
