--- a/podcasts/templates/charts.html
+++ b/podcasts/templates/charts.html
@@ -1,4 +1,4 @@
-<div class="col results-content">
+<div class="col">
   <div class="row">
     {% for podcast in results.podcasts %}
       <div class="col-12 charts-box">
@@ -7,7 +7,7 @@
             <span class="charts-rank">
               {{ podcast.position }}
             </span>
-            <img class="img-fluid" src="https://dopepod.me/img/100x100/{{ podcast.artworkUrl }}100x100bb.jpg" />
+            <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg" />
             <h1>
               {{ podcast.title }}
             </h1>
@@ -17,10 +17,14 @@
             </p>
             <ul>
               <li>
-                {{ podcast.genre }}
+                {{ podcast.language }}
               </li>
               <li>
-                {{ podcast.language }}
+                {% if podcast.genre.supergenre %}
+                  {{ podcast.genre.supergenre }}
+                {% else %}
+                  {{ podcast.genre }}
+                {% endif %}
               </li>
             </ul>
           </a>
