--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -3,13 +3,13 @@
   <div class="col-12 col-md-4 ml-auto">
     <div class="color-4-trans" id="player-wrapper">
       <a class="showpod" data-podid="{{ player.episode.podcast.podid }}" href="{% url 'showpod' podid=player.episode.podcast.podid %}">
-        <img class="img-fluid" src="https://dopepod.me/img/100x100/{{ player.episode.podcast.artworkUrl }}100x100bb.jpg" />
+        <img class="img-fluid" src="https://dopepod.me/img/{{ player.episode.podcast.artworkUrl }}100x100bb.jpg" />
       </a>
       <div id="player-buttons">
-        <a class="btn-dope player-button" id="player-minimize" href="#" aria-label="Minimize">
+        <a class="btn-dope" id="player-minimize" href="#" aria-label="Minimize">
           <i class="fas fa-minus-circle icon"></i>
         </a>
-        <a class="btn-dope player-button" id="player-close" href="#" aria-label="Close">
+        <a class="btn-dope" id="player-close" href="#" aria-label="Close">
           <i class="fas fa-times-circle icon"></i>
         </a>
       </div>
