--- a/podcasts/templates/subscriptions.html
+++ b/podcasts/templates/subscriptions.html
@@ -1,10 +1,10 @@
-<div class="col results-content">
+<div class="col">
   <div class="row">
     {% for subscription in results.podcasts %}
       {% with subscription.podcast as podcast %}
         <div class="col-12 col-md-4 subscriptions-box">
           <a class="showpod" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
-            <img class="img-fluid" src="https://dopepod.me/img/100x100/{{ podcast.artworkUrl }}100x100bb.jpg" />
+            <img class="img-fluid" src="https://dopepod.me/img/{{ podcast.artworkUrl }}100x100bb.jpg" />
           </a>
           <a class="showpod color-link" data-podid="{{ podcast.podid }}" href="/showpod/{{ podcast.podid }}/">
             <h1 class="result-title">
