--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1029,6 +1029,12 @@ a:hover {
   -moz-transition: all .15s ease-in-out;
   -webkit-transition: all .15s ease-in-out;
 }
+.charts-result:hover {
+  box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  -moz-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  -webkit-box-shadow: rgba(0,0,0,.3) 0 0 10px;
+  border: 2px solid rgba(0, 191,165, 1);
+}
 .charts-result img {
   margin-left: 5px;
   float: right;
