--- a/index/static/style.css
+++ b/index/static/style.css
@@ -20,6 +20,7 @@ a:hover {
 
 /* COOKIE BANNER */
 #cookie-banner {
+  color: rgb(46, 46, 46);
   text-align: center;
   padding: 10px;
 }
@@ -1239,6 +1240,7 @@ a:hover {
   position: absolute;
   bottom: 0;
   right: 0;
+  width: 100%;
   padding: 10px 10px 0;
   border: 2px solid rgba(0, 191, 165, 1);
   border-bottom: none;
