--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -34,7 +34,7 @@
     </div>
   </div>
 </div>
-{% elif cookies %}
+{% elif cookie_banner %}
 <div class="col-12 color-4-trans" id="cookie-banner">
   <h1>This site uses cookies</h1>
   <button class="btn-dope" onclick="cookieBannerClose()" id="cookie-banner-close">
