--- a/podcasts/templates/showpod.html
+++ b/podcasts/templates/showpod.html
@@ -108,12 +108,9 @@ Listen to episodes of {{ podcast.title }} on dopepod
         <a class="btn-dope toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
           Episodes
         </a>
-        <a class="btn-dope toggle" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse">
-          Episodes
-        </a>
-        <button class="btn-dope btn-dope-disabled">
+        <a class="btn-dope toggle" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse">
           Reviews
-        </button>
+        </a>
       </div>
     </div>
     <div class="col-12 showpod-collapse collapse show" id="episodes-collapse">
@@ -121,10 +118,10 @@ Listen to episodes of {{ podcast.title }} on dopepod
         {% include 'episodes.html' %}
       {% endif%}
     </div>
-    <div class="col-12 showpod-collapse collapse show" id="reviews-collapse">
-      {% if results.episodes %}
-        {% include 'episodes.html' %}
-      {% endif%}
+    <div class="col-12 showpod-collapse collapse" id="reviews-collapse">
+      <p>
+        Coming soon
+      </p>
     </div>
   </div>
 </div>
