del Order & Chart

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -1060,7 +1060,7 @@ a:hover {
 
 /* LAST PLAYED */
 .last-played-box {
-  padding: 10px 15px;
+  padding: 10px;
   margin-top: 15px;
   border-radius: .25rem;
   -webkit-box-shadow: rgba(0,0,0,.3) 0 0 5px;
